Adding a new version of the Widoco documentation with definitions added

--- a/WidocoDocumentation/sections/overview-en.html
+++ b/WidocoDocumentation/sections/overview-en.html
@@ -12,6 +12,10 @@ This ontology has the following classes and properties.</span>
          title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#Case_Based_Explanation">Case Based Explanation</a>
    </li>
    <li>
+      <a href="#ClinicalPearl"
+         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#ClinicalPearl">Clinical Pearls</a>
+   </li>
+   <li>
       <a href="#Contextual_Explanation"
          title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#Contextual_Explanation">Contextual Explanation</a>
    </li>
@@ -68,6 +72,14 @@ This ontology has the following classes and properties.</span>
    <li>
       <a href="#scientificExplanation"
          title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#scientificExplanation">Scientific Explanation</a>
+   </li>
+   <li>
+      <a href="#ScientificKnowledge"
+         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#ScientificKnowledge">Scientific Knowledge</a>
+   </li>
+   <li>
+      <a href="#ScientificMethod"
+         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#ScientificMethod">Scientific Method</a>
    </li>
    <li>
       <a href="#Simulation_Based"
