--- a/WidocoDocumentation/index-en.html
+++ b/WidocoDocumentation/index-en.html
@@ -6,7 +6,7 @@
 
 
 <!-- SCHEMA.ORG METADATA -->
-<script type="application/ld+json">{"@context":"http://schema.org","@type":"TechArticle","url":"http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology","image":"http://vowl.visualdataweb.org/webvowl/#iri=http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology","name":"Ontology of Explanations", "headline":"A simple ontology that encodes the system- and user- attributes of explanations that would allow them to be generated computationally. We develop this resource mainly for system designers guiding them to think about the available AI methods and reasoning tasks within their system that would be capable of generating explanations to suit the end-users' situation and requirements. We model attributes which are directly included in explanations and others that would help in their process of generation. We have used this schema to model different explanation types that address a range of questions each and their generational needs. We welcome feedback on extending this ontology to help in ontology generation in different use cases.", "datePublished":"Mon May 11 13:15:46 EDT 2020", "author":[{"@type":"Person","name":"Shruthi Chari"}], "contributor":[{"@type":"Person","name":"Amar K. Das"},{"@type":"Person","name":"Daniel M. Gruen"},{"@type":"Person","name":"Deborah L. McGuinness"},{"@type":"Person","name":"Morgan Foreman"},{"@type":"Person","name":"Oshani Seneviratne"}]}</script>
+<script type="application/ld+json">{"@context":"http://schema.org","@type":"TechArticle","url":"http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology","image":"http://vowl.visualdataweb.org/webvowl/#iri=http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology","name":"Ontology of Explanations", "headline":"A simple ontology that encodes the system- and user- attributes of explanations that would allow them to be generated computationally. We develop this resource mainly for system designers guiding them to think about the available AI methods and reasoning tasks within their system that would be capable of generating explanations to suit the end-users' situation and requirements. We model attributes which are directly included in explanations and others that would help in their process of generation. We have used this schema to model different explanation types that address a range of questions each and their generational needs. We welcome feedback on extending this ontology to help in ontology generation in different use cases.", "datePublished":"Sun May 17 18:46:31 EDT 2020", "author":[{"@type":"Person","name":"Shruthi Chari"}], "contributor":[{"@type":"Person","name":"Amar K. Das"},{"@type":"Person","name":"Daniel M. Gruen"},{"@type":"Person","name":"Deborah L. McGuinness"},{"@type":"Person","name":"Morgan Foreman"},{"@type":"Person","name":"Oshani Seneviratne"}]}</script>
 
 <script src="resources/jquery.js"></script> 
 <script src="resources/marked.min.js"></script> 
@@ -72,7 +72,7 @@ function loadTOC(){
 <dd>Amar K. Das</dd><dd>Daniel M. Gruen</dd><dd>Deborah L. McGuinness</dd><dd>Morgan Foreman</dd><dd>Oshani Seneviratne</dd>
 
 <dt>Imported Ontologies:</dt>
-<dd><a href="http://semanticscience.org/ontology/sio.owl">sio.owl</a></dd>
+<dd><a href="http://semanticscience.org/ontology/sio.owl">sio.owl</a></dd><dd><a href="http://www.w3.org/ns/prov-o#">prov-o#</a></dd>
 
 <dt>Download serialization:</dt><dd><span><a href="ontology.json" target="_blank"><img src="https://img.shields.io/badge/Format-JSON_LD-blue.svg" alt="JSON-LD" /></a> </span><span><a href="ontology.xml" target="_blank"><img src="https://img.shields.io/badge/Format-RDF/XML-blue.svg" alt="RDF/XML" /></a> </span><span><a href="ontology.nt" target="_blank"><img src="https://img.shields.io/badge/Format-N_Triples-blue.svg" alt="N-Triples" /></a> </span><span><a href="ontology.ttl" target="_blank"><img src="https://img.shields.io/badge/Format-TTL-blue.svg" alt="TTL" /></a> </span></dd><dt>License: </dt><dd><a href="http://insertlicenseURIhere.org" target="_blank"><img src="https://img.shields.io/badge/License-Copyright%202019%20IBM%20Research%20and%20Rensselaer%20Polytechnic%20Institute
 
@@ -92,7 +92,7 @@ function loadTOC(){
 <dd>Shruthi Chari. Ontology of Explanations. Retrieved from: http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology/1.0.0</dd>
 </dl>
 
-<hr/>
+<a href="provenance/provenance-en.html" target="_blank">Provenance of this page</a><hr/>
 </div>
 <div class="status">
 <div>
