--- a/WidocoDocumentation/sections/introduction-en.html
+++ b/WidocoDocumentation/sections/introduction-en.html
@@ -7,7 +7,7 @@ This is a place holder text for the introduction. The introduction should briefl
 <table>
 <caption> <a href="#ns"> Table 1</a>: Namespaces used in the document </caption>
 <tbody>
-<tr><td><b>eo</b></td><td>&lt;http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology&gt;</td></tr>
+<tr><td><b>[Ontology NS Prefix]</b></td><td>&lt;http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology&gt;</td></tr>
 <tr><td><b>schema</b></td><td>&lt;http://schema.org&gt;</td></tr>
 <tr><td><b>dedalo</b></td><td>&lt;http://linkedu.eu/dedalo&gt;</td></tr>
 <tr><td><b>void</b></td><td>&lt;http://rdfs.org/ns/void&gt;</td></tr>
@@ -17,6 +17,7 @@ This is a place holder text for the introduction. The introduction should briefl
 <tr><td><b>protege</b></td><td>&lt;http://protege.stanford.edu/plugins/owl/protege&gt;</td></tr>
 <tr><td><b>situation-owl</b></td><td>&lt;http://www.ontologydesignpatterns.org/cp/owl/situation.owl&gt;</td></tr>
 <tr><td><b>xsd</b></td><td>&lt;http://www.w3.org/2001/XMLSchema&gt;</td></tr>
+<tr><td><b>skos</b></td><td>&lt;http://www.w3.org/2004/02/skos/core&gt;</td></tr>
 <tr><td><b>rdfs</b></td><td>&lt;http://www.w3.org/2000/01/rdf-schema&gt;</td></tr>
 <tr><td><b>explanationpattern-owl</b></td><td>&lt;http://linkedu.eu/dedalo/explanationPattern.owl&gt;</td></tr>
 <tr><td><b>dul-owl</b></td><td>&lt;http://www.ontologydesignpatterns.org/ont/dul/DUL.owl&gt;</td></tr>
@@ -25,6 +26,7 @@ This is a place holder text for the introduction. The introduction should briefl
 <tr><td><b>rdf</b></td><td>&lt;http://www.w3.org/1999/02/22-rdf-syntax-ns&gt;</td></tr>
 <tr><td><b>terms</b></td><td>&lt;http://purl.org/dc/terms&gt;</td></tr>
 <tr><td><b>vann</b></td><td>&lt;http://purl.org/vocab/vann&gt;</td></tr>
+<tr><td><b>prov</b></td><td>&lt;http://www.w3.org/ns/prov&gt;</td></tr>
 <tr><td><b>foaf</b></td><td>&lt;http://xmlns.com/foaf/0.1&gt;</td></tr>
 <tr><td><b>ontology</b></td><td>&lt;http://semanticscience.org/ontology&gt;</td></tr>
 <tr><td><b>dc</b></td><td>&lt;http://purl.org/dc/elements/1.1&gt;</td></tr>
