Adding descriptions for object properties and regenerating widoco documentation

--- a/WidocoDocumentation/sections/crossref-en.html
+++ b/WidocoDocumentation/sections/crossref-en.html
@@ -785,6 +785,9 @@ vol. 267, pp. 1–38, 2019.</dd>
       </h3>
       <p>
          <strong>IRI:</strong> http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#addresses</p>
+      <div class="info">
+         <span class="markdown">a addresses b if a provides an answer to b</span>
+      </div>
       <div class="description">
          <dl>
             <dt>has super-properties</dt>
@@ -801,6 +804,9 @@ vol. 267, pp. 1–38, 2019.</dd>
       </h3>
       <p>
          <strong>IRI:</strong> http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#asks</p>
+      <div class="info">
+         <span class="markdown">a property between a creator and the question that the creator poses</span>
+      </div>
       <div class="description">
          <dl>
             <dt>has super-properties</dt>
@@ -817,6 +823,9 @@ vol. 267, pp. 1–38, 2019.</dd>
       </h3>
       <p>
          <strong>IRI:</strong> http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#hasPreferenceFor</p>
+      <div class="info">
+         <span class="markdown">a property that captures what form of output an entity a is presented in</span>
+      </div>
       <div class="description">
          <dl>
             <dt>has super-properties</dt>
@@ -833,6 +842,9 @@ vol. 267, pp. 1–38, 2019.</dd>
       </h3>
       <p>
          <strong>IRI:</strong> http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#hasPresentation</p>
+      <div class="info">
+         <span class="markdown">a property that captures what form of output an entity a is presented in</span>
+      </div>
       <div class="description">
          <dl>
             <dt>has super-properties</dt>
@@ -849,6 +861,9 @@ vol. 267, pp. 1–38, 2019.</dd>
       </h3>
       <p>
          <strong>IRI:</strong> http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#implements</p>
+      <div class="info">
+         <span class="markdown">a property that associates a process with an object/informational content entity that it addresses</span>
+      </div>
       <div class="description">
          <dl>
             <dt>has super-properties</dt>
@@ -865,6 +880,9 @@ vol. 267, pp. 1–38, 2019.</dd>
       </h3>
       <p>
          <strong>IRI:</strong> http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#consumes</p>
+      <div class="info">
+         <span class="markdown">a property that associates a person entity with the object they consume</span>
+      </div>
       <div class="description">
          <dl>
             <dt>has super-properties</dt>
@@ -881,6 +899,9 @@ vol. 267, pp. 1–38, 2019.</dd>
       </h3>
       <p>
          <strong>IRI:</strong> http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#possess</p>
+      <div class="info">
+         <span class="markdown">maps a property with its associated object</span>
+      </div>
       <div class="description">
          <dl>
             <dt>has super-properties</dt>
