--- a/WidocoDocumentation/sections/overview-en.html
+++ b/WidocoDocumentation/sections/overview-en.html
@@ -4,6 +4,10 @@ This ontology has the following classes and properties.</span>
 <h4>Classes</h4>
 <ul class="hlist">
    <li>
+      <a href="#ArtificialIntelligenceMethod"
+         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#ArtificialIntelligenceMethod">AI Method</a>
+   </li>
+   <li>
       <a href="#AITask"
          title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#AITask">Artificial Intelligence Task</a>
    </li>
@@ -44,6 +48,10 @@ This ontology has the following classes and properties.</span>
          title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#Evidence_Based_Explanation">Evidence Based Explanation</a>
    </li>
    <li>
+      <a href="#ExperentialKnowledge"
+         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#ExperentialKnowledge">Experential Knowledge</a>
+   </li>
+   <li>
       <a href="#http://linkedu.eu/dedalo/explanationPattern.owl#Explanation"
          title="http://linkedu.eu/dedalo/explanationPattern.owl#Explanation">Explanation</a>
    </li>
@@ -52,10 +60,16 @@ This ontology has the following classes and properties.</span>
          title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#ExplanationGoal">Explanation Goal</a>
    </li>
    <li>
+      <a href="#FoilInSupportOfB"
+         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#FoilInSupportOfB">Factual Knowledge that supports a system recommendation B</a>
+   </li>
+   <li>
+      <a href="#FactInSupportOfA"
+         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#FactInSupportOfA">Factual Knowledge that supports recommendation A</a>
+   </li>
+   <li>
       <a href="#knowledge"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#knowledge">
-         <span>knowledge</span>
-      </a>
+         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#knowledge">Knowledge</a>
    </li>
    <li>
       <a href="#Mechanistic_Explanation"
@@ -68,6 +82,14 @@ This ontology has the following classes and properties.</span>
    <li>
       <a href="#Numerical_Evidence"
          title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#Numerical_Evidence">Numerical Evidence</a>
+   </li>
+   <li>
+      <a href="#object_record"
+         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#object_record">Object Record</a>
+   </li>
+   <li>
+      <a href="#Reasoning_Mode"
+         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#Reasoning_Mode">Reasoning Mode</a>
    </li>
    <li>
       <a href="#scientificExplanation"
@@ -92,6 +114,10 @@ This ontology has the following classes and properties.</span>
    <li>
       <a href="#system_recommendation"
          title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#system_recommendation">System Recommendation</a>
+   </li>
+   <li>
+      <a href="#SystemTrace"
+         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#SystemTrace">System Trace</a>
    </li>
    <li>
       <a href="#Trace_Based"
