Changing to dc:description and regenerating Widoco to check for coverage

--- a/WidocoDocumentation/sections/crossref-en.html
+++ b/WidocoDocumentation/sections/crossref-en.html
@@ -525,6 +525,9 @@ understanding and knowledge [(McNeil and Krajack, 2008) of how the world works, 
       </h3>
       <p>
          <strong>IRI:</strong> http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#ExplanationGoal</p>
+      <div class="info">
+         <span class="markdown">the impact that an explanation has on a user or the purpose it was designed to achieve</span>
+      </div>
       <dl>
          <dt>Example</dt>
          <dd>
@@ -545,6 +548,9 @@ understanding and knowledge [(McNeil and Krajack, 2008) of how the world works, 
       </h3>
       <p>
          <strong>IRI:</strong> http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#FoilInSupportOfB</p>
+      <div class="info">
+         <span class="markdown">facts that would have/led to a system recommendation B</span>
+      </div>
       <dl class="definedBy">
          <dt>Is defined by</dt>
          <dd>http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology</dd>
@@ -565,6 +571,9 @@ understanding and knowledge [(McNeil and Krajack, 2008) of how the world works, 
       </h3>
       <p>
          <strong>IRI:</strong> http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#FactInSupportOfA</p>
+      <div class="info">
+         <span class="markdown">inputs and other considerations that led to a system recommendation</span>
+      </div>
       <dl class="definedBy">
          <dt>Is defined by</dt>
          <dd>http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology</dd>
@@ -679,6 +688,9 @@ understanding and knowledge [(McNeil and Krajack, 2008) of how the world works, 
       </h3>
       <p>
          <strong>IRI:</strong> http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#object_record</p>
+      <div class="info">
+         <span class="markdown">a collection of fields that has been gathered for a particular object and the selection is fed to a computer program</span>
+      </div>
       <dl class="definedBy">
          <dt>Is defined by</dt>
          <dd>http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology</dd>
@@ -952,6 +964,9 @@ vol. 267, pp. 1–38, 2019.</dd>
       </h3>
       <p>
          <strong>IRI:</strong> http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#User_Context</p>
+      <div class="info">
+         <span class="markdown">any relevant information that can be used to characterize the situation of a user. There are three important aspects of user context: where the user is, whom the user is with, and what resources are nearby.</span>
+      </div>
       <dl class="definedBy">
          <dt>Source</dt>
          <dd>https://www.igi-global.com/dictionary/researching-mobile-learning/37179</dd>
