--- a/WidocoDocumentation/sections/overview-en.html
+++ b/WidocoDocumentation/sections/overview-en.html
@@ -60,6 +60,10 @@ This ontology has the following classes and properties.</span>
          title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#ExplanationGoal">Explanation Goal</a>
    </li>
    <li>
+      <a href="#ExplanationModality"
+         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#ExplanationModality">Explanation Modality</a>
+   </li>
+   <li>
       <a href="#FoilInSupportOfB"
          title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#FoilInSupportOfB">Factual Knowledge that supports a system recommendation B</a>
    </li>
@@ -74,10 +78,6 @@ This ontology has the following classes and properties.</span>
    <li>
       <a href="#Mechanistic_Explanation"
          title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#Mechanistic_Explanation">Mechanistic Explanation</a>
-   </li>
-   <li>
-      <a href="#ModeOfExplanation"
-         title="http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology#ModeOfExplanation">Mode of Explanation</a>
    </li>
    <li>
       <a href="#Numerical_Evidence"
