--- a/WidocoDocumentation/index-en.html
+++ b/WidocoDocumentation/index-en.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
- <link rel="stylesheet" href="resources/primer.css" media="screen" />    <link rel="stylesheet" href="resources/rec.css" media="screen" />    <link rel="stylesheet" href="resources/extra.css" media="screen" />    <link rel="stylesheet" href="resources/owl.css" media="screen" />    <title>Ontology of Explanations</title>
+ <link rel="stylesheet" href="resources/primer.css" media="screen" />    <link rel="stylesheet" href="resources/rec.css" media="screen" />    <link rel="stylesheet" href="resources/extra.css" media="screen" />    <link rel="stylesheet" href="resources/owl.css" media="screen" />    <title>Explanations Ontology</title>
 
 
 <!-- SCHEMA.ORG METADATA -->
-<script type="application/ld+json">{"@context":"http://schema.org","@type":"TechArticle","url":"http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology","image":"http://vowl.visualdataweb.org/webvowl/#iri=http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology","name":"Ontology of Explanations", "headline":"A simple ontology that encodes the system- and user- attributes of explanations that would allow them to be generated computationally. We develop this resource mainly for system designers guiding them to think about the available AI methods and reasoning tasks within their system that would be capable of generating explanations to suit the end-users' situation and requirements. We model attributes which are directly included in explanations and others that would help in their process of generation. We have used this schema to model different explanation types that address a range of questions each and their generational needs. We welcome feedback on extending this ontology to help in ontology generation in different use cases.", "datePublished":"Mon May 18 09:56:44 EDT 2020", "author":[{"@type":"Person","name":"Shruthi Chari"}], "contributor":[{"@type":"Person","name":"Amar K. Das"},{"@type":"Person","name":"Daniel M. Gruen"},{"@type":"Person","name":"Deborah L. McGuinness"},{"@type":"Person","name":"Morgan Foreman"},{"@type":"Person","name":"Oshani Seneviratne"}]}</script>
+<script type="application/ld+json">{"@context":"http://schema.org","@type":"TechArticle","url":"http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology","image":"http://vowl.visualdataweb.org/webvowl/#iri=http://www.semanticweb.org/shruthichari/ontologies/2020/3/explanation-ontology","name":"Explanations Ontology", "headline":"A simple ontology that encodes the system- and user- attributes of explanations that would allow them to be generated computationally. We develop this resource mainly for system designers guiding them to think about the available AI methods and reasoning tasks within their system that would be capable of generating explanations to suit the end-users' situation and requirements. We model attributes which are directly included in explanations and others that would help in their process of generation. We have used this schema to model different explanation types that address a range of questions each and their generational needs. We welcome feedback on extending this ontology to help in ontology generation in different use cases.", "datePublished":"Mon May 18 10:32:26 EDT 2020", "author":[{"@type":"Person","name":"Shruthi Chari"}], "contributor":[{"@type":"Person","name":"Amar K. Das"},{"@type":"Person","name":"Daniel M. Gruen"},{"@type":"Person","name":"Deborah L. McGuinness"},{"@type":"Person","name":"Morgan Foreman"},{"@type":"Person","name":"Oshani Seneviratne"}]}</script>
 
 <script src="resources/jquery.js"></script> 
 <script src="resources/marked.min.js"></script> 
@@ -59,7 +59,7 @@ function loadTOC(){
 <div class="container">
 <div class="head">
 <div style="float:right">language <a href="index-en.html"><b>en</b></a> </div>
-<h1>Ontology of Explanations</h1>
+<h1>Explanations Ontology</h1>
 
 
 <dl>
