--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Explanations Ontology - Treating Explanations as Primary Consideration
 ---
 
-
+<h1 class="page-title">Explanations Ontology - Treating Explanations as Primary Consideration</h1>
 <article class="mb-5" id="abstract">
 <content>
 <h2>Abstract</h2>
