--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: Explanations Ontology - Treating Explanations as Primary Consideration
 ---
 
 <h1 class="page-title">Explanations Ontology - Treating Explanations as Primary Consideration</h1>
+<p class="message">A website to navigate resources open-sourced via the associated ISWC 2020 submission</p>
 <article class="mb-5" id="abstract">
 <content>
 <h2>Abstract</h2>
