--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: Explanations Ontology - Treating Explanations as Primary Consideration
 ---
 
 <h1 class="page-title">Explanations Ontology - Treating Explanations as Primary Consideration</h1>
+<h3 style="color:dimgrey;">Shruthi Chari, Oshani Seneviratne, Daniel M. Gruen, Morgan Foreman, Deborah L. McGuinness, Amar Das</h3>
 <p class="message">A website to navigate resources open-sourced via the associated ISWC 2020 submission</p>
 <article class="mb-5" id="abstract">
 <content>
