--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@ title: Explanations Ontology - Treating Explanations as Primary Consideration
 <h3><a href="https://www.rpi.edu/"><sup>1</sup>Rensselaer Polytechnic Institute</a> | <a href="https://www.research.ibm.com/labs/cambridge/"><sup>2</sup>IBM Research, Cambridge</a></h3>
 <p class="message">A website to navigate resources open-sourced via the associated ISWC 2020 submission</p>
 
-<table>
+<!-- <table>
   <tbody>
     <tr>
       <td><a href="#abstract">Abstract</a></td>
     </tr>
   </tbody>
-</table>
+</table> -->
 
 <article class="mb-5" id="abstract">
 <content>
